--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -6,10 +6,12 @@
             "command": "/usr/bin/gcc",
             "args": [
                 "-fdiagnostics-color=always",
-                "-g",
-                "${file}",
+                "-Wall", "-g",
+                "*.c",
+                "./src/*.c",
+                "-lm","-lSDL2",
                 "-o",
-                "${fileDirname}/${fileBasenameNoExtension}"
+                "${fileDirname}/mesh"
             ],
             "options": {
                 "cwd": "${fileDirname}"
